# flatmates-app

./: .gitignore  .pre-commit-config.yaml  AI_FEATURES.md  APP_DOCUMENTATION.md  BUILD_APK.md  DEPLOYMENT_GUIDE.md  KOTLIN_MIGRATION_PLAN.md  Makefile  PLAY_STORE_LISTING.md  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md
.github/: dependabot.yml
.github/workflows/: azure-deploy.yml  backend-ci.yml  full-ci.yml  mobile-ci.yml
ai-agent-prompts/: 01-backend-reliability.md  02-android-project-setup.md  04-ui-theme-design.md  07-sync-auth.md  08-testing-polish.md  README.md
android-app/: .gitignore  build.gradle.kts  gradle.properties  gradlew  local.properties.example  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/gradle/: libs.versions.toml
backend/: .env.example  .env.production.example  .env.production.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  VALIDATION.md  alembic.ini  app.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  railway.json  render.yaml  requirements.txt  start_server.sh  test_setup.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_add_households_and_shopping.py  002_create_household_tables.py  002_create_households_and_todos.py  003_create_expense_tables.py  003_create_todos_table.py  004_create_expense_tables.py  004_create_expenses_table.py  004_create_shopping_list_tables.py  005_create_expense_tables.py  006_create_inventory_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  expenses.py  households.py  inventory.py  shopping.py  sync.py  todos.py
backend/app/core/: config.py  database.py  logging.py  metrics.py  security.py  sentry.py
backend/app/db/: base.py
backend/app/models/: __init__.py  base.py  expense.py  household.py  inventory.py  shopping.py  todo.py  user.py
backend/app/schemas/: __init__.py  auth.py  expense.py  household.py  inventory.py  shopping.py  sync.py  todo.py
backend/app/services/: __init__.py  ai_service.py  gemini_service.py
backend/docs/: TODOS_API.md
backend/infrastructure/loki/: loki-config.yml
backend/infrastructure/prometheus/: prometheus.yml
backend/tests/: __init__.py  conftest.py  test_auth.py  test_auth_endpoints.py  test_database.py  test_health.py  test_household_endpoints.py  test_reliability.py  test_shopping_endpoints.py  test_shopping_models.py  test_todos.py
infrastructure/: README.md
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform-azure/: .gitignore  README.md  main.tf  terraform.tfvars.example
infrastructure/terraform-digitalocean/: main.tf  terraform.tfvars.example
infrastructure/terraform/modules/ecs/: main.tf
infrastructure/terraform/modules/monitoring/: main.tf
infrastructure/terraform/modules/rds/: main.tf
infrastructure/terraform/modules/redis/: main.tf
infrastructure/terraform/modules/security/: main.tf
infrastructure/terraform/modules/vpc/: main.tf
mobile/: .env.development  .env.production  PROJECT_SUMMARY.md  README.md  app.config.js  app.json  eas.json  jest.config.js  jest.setup.js  package-lock.json  package.json
mobile/__tests__/: App.test.tsx
mobile/__tests__/integration/: shopping.integration.test.ts
mobile/__tests__/store/: authSlice.test.ts
mobile/__tests__/utils/: validation.test.ts
mobile/app/: _layout.tsx  add-inventory-item.tsx  join-household.tsx  login.tsx  members.tsx  onboarding.tsx
mobile/app/(tabs)/: _layout.tsx  expenses.tsx  index.tsx  inventory.tsx  profile.tsx  shopping.tsx  todos.tsx
mobile/app/shopping/: [id].tsx
mobile/app/todos/: [id].tsx
mobile/src/components/: FeatureTutorial.tsx  NetworkError.tsx  OfflineBanner.tsx
mobile/src/components/expenses/: ExpenseCard.tsx
mobile/src/components/shopping/: AddItemForm.tsx  CategoryFilter.tsx  ShoppingItemList.tsx  ShoppingListCard.tsx
mobile/src/components/todos/: TodoItemModal.tsx
mobile/src/hooks/: useGoogleAuth.ts  useNotifications.ts
mobile/src/screens/todos/: TodoListDetailScreen.tsx  TodoListsScreen.tsx
mobile/src/services/: localDataService.ts  notificationService.ts
mobile/src/store/: index.ts
mobile/src/store/middleware/: notificationMiddleware.ts
mobile/src/store/services/: api.ts  authApi.ts  expenseApi.ts  householdApi.ts  inventoryApi.ts  shoppingApi.ts  todoApi.ts  todosApi.ts
mobile/src/store/slices/: authSlice.ts  expenseSlice.ts  householdSlice.ts  shoppingSlice.ts
mobile/src/types/: index.ts  notification.ts
mobile/src/utils/: offlineMode.ts  validation.ts
old/ai-agent-prompts/: 03-domain-models.md  05-data-layer-room.md  06-feature-screens.md
old/mobile/: .env.example  .eslintrc.js  README.md  SETUP_VERIFICATION.md  app.json  jest.setup.js  package.json  tsconfig.json
old/mobile/__tests__/store/: authSlice.test.ts
old/mobile/__tests__/utils/: validation.test.ts
old/mobile/app/: _layout.tsx  create-household.tsx  household-switcher.tsx  login.tsx  onboarding.tsx
old/mobile/app/(tabs)/: shopping.tsx  todos.tsx
old/mobile/src/components/: ErrorBoundary.tsx  FeatureTutorial.tsx  NetworkError.tsx  README.md
old/mobile/src/components/expenses/: AddExpenseModal.tsx
old/mobile/src/hooks/: useGoogleAuth.ts  useNotifications.ts
old/mobile/src/services/: notificationService.ts
old/mobile/src/store/: index.ts
old/mobile/src/theme/: theme.ts
old/mobile/src/utils/: offlineMode.ts  storage.ts
old/terraform-digitalocean/: README.md
scripts/: deploy-azure.sh  verify-setup.sh
(+168 files in other folders)
