[project]
name = "flatmates-backend"
version = "1.0.0"
description = "FastAPI backend for Flatmates App - collaborative household management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Himanshu Lodha", email = "himanshu@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # Database
    "sqlalchemy>=2.0.35",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.14.0",
    
    # Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.3.2",
    "google-auth>=2.36.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",  # Pin bcrypt < 5 for passlib compatibility
    
    # HTTP & Utilities
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    
    # AI Services
    "google-generativeai>=0.8.3",
    "openai>=1.57.0",
    "pillow>=11.0.0",
    
    # Observability
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi]>=2.0.0",
    
    # Production Performance
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "httptools>=0.6.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.28.0",
    "faker>=33.0.0",
    
    # Linting & Formatting
    "ruff>=0.8.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "mypy>=1.13.0",
    
    # Type stubs
    "types-requests>=2.32.0",
    "types-passlib>=1.7.7",
    
    # Pre-commit hooks
    "pre-commit>=4.0.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

# Note: Use 'uv run uvicorn app.main:app --reload' to start the server
# The [project.scripts] section is removed as it requires module:function format

[project.urls]
Homepage = "https://github.com/himanshulodha2002/flatmates-app"
Repository = "https://github.com/himanshulodha2002/flatmates-app"
Documentation = "https://github.com/himanshulodha2002/flatmates-app#readme"
Issues = "https://github.com/himanshulodha2002/flatmates-app/issues"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Ruff - Modern Python linter and formatter
[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
]
unfixable = ["F841"]  # Don't auto-remove unused variables

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]
"alembic/*" = ["ERA001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Black - Code formatter (backup for IDEs that don't support ruff format)
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | alembic/versions
  | build
  | dist
)/
'''

# isort - Import sorting
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
skip_glob = ["*/alembic/versions/*"]

# MyPy - Static type checking
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "google.*",
    "authlib.*",
    "passlib.*",
    "google_generativeai.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true
